envoyfilter-teaching/envoyfilter/redis/envoyfilter-redis-proxy-faults-ERROR.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-redis-proxy
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        name: 10.68.139.110_6379               # Replace REDIS_VIP with the cluster IP of "redis-cluster service
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
        name: envoy.filters.network.redis_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy
          stat_prefix: redis_stats
          prefix_routes:
            catch_all_route:
              cluster: custom-redis-cluster
          faults:
          - fault_type: ERROR
            fault_enabled:
              default_value:
                numerator: 100
                denominator: HUNDRED
            commands:
            - SET
          settings:
            op_timeout: 5s
            enable_redirection: true
            enable_command_stats: true
            enable_hashtagging: true
            max_upstream_unknown_connections: 100
            max_buffer_size_before_flush: 1024
            buffer_flush_timeout: 3ms
            read_policy: REPLICA
